--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "start": "node server.js",
     "dev": "nodemon dev"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "fs": "^0.0.1-security",
     "nodemon": "^2.0.20",
     "pug": "^3.0.2",
     "socket.io": "^4.5.4"
